--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/templates/leaves.j2
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/templates/leaves.j2
@@ -2,3 +2,101 @@
 hostname {{ host.name }}
 no enable password
 no aaa root
+
+! Used for internal VLANs on routed ports. 
+vlan internal order ascending range 1000 1200
+
+! Different agents for different routing protocols (ArBGP). 
+service routing protocols model multi-agent
+
+! Split 40G interface into 4 x 10G
+transceiver qsfp default-mode 4x10G
+
+! VRF AND SERVICES
+vrf instance {{ host.mgmt_vrf_name }}
+
+! GNMI
+management api gnmi
+   transport grpc default
+      vrf {{ host.mgmt_vrf_name }}
+
+! NETCONF
+management api netconf
+   transport ssh default
+      vrf {{ host.mgmt_vrf_name }}
+
+! eAPI
+management api http-commands
+    protocol https
+    no shutdown
+   !
+   vrf {{ host.mgmt_vrf_name }}
+      no shutdown
+
+! IP ROUTING
+ip routing
+no ip routing vrf {{ host.mgmt_vrf_name }}
+ip route vrf MGMT 0.0.0.0/0 172.100.100.1
+ipv6 route vrf MGMT ::/0 2001:172:100:100::1
+
+! LOOPBACK INTERFACES
+interface Loopback0
+   description VTEP_RID_{{ host.name | upper }}
+   no shutdown
+   ip address {{ host.lo0_ips[host.name] }}
+!
+interface Loopback1
+   description VXLAN_TUNNEL_SOURCE_{{ host.name | upper }}
+   no shutdown
+   ip address {{ host.lo1_ips[host.name] }}
+   
+! LEAF-SPINE-INTERFACES
+Interface Ethernet 1
+{# Returns only the device number leaf3 l3 --> 3 #}
+   description P2P_S1_Eth{{ host.name[1:] }}
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address {{ host.p2p_ips[host.name]['to_s1'] }}
+
+Interface Ethernet 2
+{# Returns only the device number leaf3 l3 --> 3 #}
+   description P2P_S2_Eth{{ host.name[1:] }}
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address {{ host.p2p_ips[host.name]['to_s2'] }}
+
+! LEAF-ONLY-CONFIG
+! Each Leaf should become a root STP bridge in its own segment to avoid someone else plugin a switch in the access ports and causing that switch to be elected as root or causing a L2 loop.
+
+spanning-tree mode mstp
+spanning-tree mst 0 priority 4096
+
+! UNDERLAY
+! The aim here is to create BGP Peerings via the physical interfaces between the Leaves and the Spines.
+! After the peering has been created, we will advertise the Lo0 via eBGP to be used for peering in the OVerlay (EVPN - Control Plane) and L1 to be used as the VTEP Source IP (VXLAN - Data Plane)
+
+! Define the Loopbacks we want to advertise
+ip prefix-list PL-LOOPBACKS seq 10 permit  {{ host.lo0_ips[host.name] }}
+ip prefix-list PL-LOOPBACKS seq 20 permit  {{ host.lo1_ips[host.name] }}
+
+! Create a Route Map
+route-map RM-UNDERLAY-ADVERTISE permit 10
+   match ip address prefix-list PL-LOOPBACKS 
+
+router bgp {{ host.asns[host.name] }}
+   router-id {{ host.lo0_ips[host.name] }}
+   ! You will not only exchange IPv4 routes but also EVPN routes
+   no bgp default ipv4-unicast
+   ! ECMP load-balancing across 4 paths if available.
+   maximum-paths {{ host.ecmp_maximum_paths }}
+   redistribute connected route-map RM-UNDERLAY-ADVERTISE
+
+   neighbor IPV4-SPINES peer group
+   neighbor IPV4-SPINES password 0 admin
+   neighbor IPV4-SPINES send-community
+   neighbor IPV4-SPINES maximum-routes {{ host.bgp_maximum_routes }}
+   neighbor IPV4-SPINES remote-as {{ host.asns.spines }}
+   neighbor IPV4-SPINES route-map RM-UNDERLAY-ADVERTISE out
+   
