Adding spines Jinja Templates

--- a/clab/arista/dmac/evpn-vxlan-l3gw/nornir/templates/spines.j2
+++ b/clab/arista/dmac/evpn-vxlan-l3gw/nornir/templates/spines.j2
@@ -2,3 +2,134 @@
 hostname {{ host.name }}
 no enable password
 no aaa root
+
+! Used for internal VLANs on routed ports. 
+vlan internal order ascending range 1000 1200
+
+! Different agents for different routing protocols (ArBGP). 
+service routing protocols model multi-agent
+
+! Split 40G interface into 4 x 10G
+transceiver qsfp default-mode 4x10G
+
+! VRF AND SERVICES
+vrf instance {{ host.mgmt_vrf_name }}
+
+! GNMI
+management api gnmi
+   transport grpc default
+      vrf {{ host.mgmt_vrf_name }}
+
+! NETCONF
+management api netconf
+   transport ssh default
+      vrf {{ host.mgmt_vrf_name }}
+
+! eAPI
+management api http-commands
+    protocol https
+    no shutdown
+   !
+   vrf {{ host.mgmt_vrf_name }}
+      no shutdown
+
+! IP ROUTING
+ip routing
+no ip routing vrf {{ host.mgmt_vrf_name }}
+ip route vrf MGMT 0.0.0.0/0 172.100.100.1
+ipv6 route vrf MGMT ::/0 2001:172:100:100::1
+
+! LOOPBACK INTERFACES
+interface Loopback0
+   description VTEP_RID_{{ host.name | upper }}
+   no shutdown
+   ip address {{ host.lo0_ips[host.name] }}
+!
+
+! LEAF-SPINE-INTERFACES
+Interface Ethernet 1
+   description P2P_L1_Eth{{ host.name[1:] }}
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address {{ host.p2p_ips[host.name]['to_l1'] }}
+
+Interface Ethernet 2
+   description P2P_L2_Eth{{ host.name[1:] }}
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address {{ host.p2p_ips[host.name]['to_l2'] }}
+   
+Interface Ethernet 3
+   description P2P_L3_Eth{{ host.name[1:] }}
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address {{ host.p2p_ips[host.name]['to_l3'] }}
+   
+Interface Ethernet 4
+   description P2P_L4_Eth{{ host.name[1:] }}
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address {{ host.p2p_ips[host.name]['to_l4'] }}
+   
+Interface Ethernet 5
+   description P2P_L5_Eth{{ host.name[1:] }}
+   no shutdown
+   mtu 9214
+   no switchport
+   ip address {{ host.p2p_ips[host.name]['to_l5'] }}
+
+! SPINE-ONLY-CONFIG
+! Spines act as a pure Layer 3 device. They don't need SPT
+spanning-tree mode none
+
+! UNDERLAY
+! The aim here is to create BGP Peerings via the physical interfaces between the Leaves and the Spines.
+! After the peering has been created, we will advertise the Lo0 via eBGP to be used for peering in the OVerlay (EVPN - Control Plane) and L1 to be used as the VTEP Source IP (VXLAN - Data Plane)
+
+! Define the Loopbacks we want to advertise
+ip prefix-list PL-LOOPBACKS seq 10 permit {{ host.lo0_ips[host.name] }}
+
+! Create a Route Map
+route-map RM-UNDERLAY-ADVERTISE permit 10
+   match ip address prefix-list PL-LOOPBACKS 
+
+router bgp {{ host.asns.spines }}
+   router-id {{ host.lo0_ips[host.name] }}
+   ! You will not only exchange IPv4 routes but also EVPN routes
+   no bgp default ipv4-unicast
+   ! ECMP load-balancing across 4 paths if available.
+   maximum-paths {{ host.ecmp_maximum_paths }}
+   redistribute connected route-map RM-UNDERLAY-ADVERTISE
+
+   neighbor IPV4-LEAVES peer group
+   neighbor IPV4-LEAVES password 0 {{ host.secret_bgp_password }}
+   neighbor IPV4-LEAVES send-community
+   neighbor IPV4-LEAVES maximum-routes {{ host.bgp_maximum_routes }}
+
+   neighbor {{ host.p2p_ips['l1']['to_s1'] }} description L1_ETH{{ host.name[1:] }}
+   neighbor {{ host.p2p_ips['l1']['to_s1'] }} peer group IPV4-LEAVES
+   neighbor {{ host.p2p_ips['l1']['to_s1'] }} remote-as {{ host.asns['l1'] }}
+   
+   neighbor {{ host.p2p_ips['l2']['to_s1'] }} description L2_ETH{{ host.name[1:] }}
+   neighbor {{ host.p2p_ips['l2']['to_s1'] }} peer group IPV4-LEAVES
+   neighbor {{ host.p2p_ips['l2']['to_s1'] }} remote-as {{ host.asns['l2'] }}
+
+   neighbor {{ host.p2p_ips['l3']['to_s1'] }} description L3_ETH{{ host.name[1:] }}
+   neighbor {{ host.p2p_ips['l3']['to_s1'] }} peer group IPV4-LEAVES
+   neighbor {{ host.p2p_ips['l3']['to_s1'] }} remote-as {{ host.asns['l3'] }}
+
+   neighbor {{ host.p2p_ips['l4']['to_s1'] }} description L4_ETH{{ host.name[1:] }}
+   neighbor {{ host.p2p_ips['l4']['to_s1'] }} peer group IPV4-LEAVES
+   neighbor {{ host.p2p_ips['l4']['to_s1'] }} remote-as {{ host.asns['l4'] }}
+
+   neighbor {{ host.p2p_ips['l5']['to_s1'] }} description L5_ETH{{ host.name[1:] }}
+   neighbor {{ host.p2p_ips['l5']['to_s1'] }} peer group IPV4-LEAVES
+   neighbor {{ host.p2p_ips['l5']['to_s1'] }} remote-as {{ host.asns['l5'] }}
+
+address-family ipv4
+      neighbor IPV4-LEAVES activate
+
